--- a/Base/app/src/main/res/layout/base_title.xml
+++ b/Base/app/src/main/res/layout/base_title.xml
@@ -9,7 +9,8 @@
 
         <LinearLayout
             android:id="@+id/ll_left"
-            style="@style/margin"
+            android:paddingLeft="@dimen/margin"
+            android:paddingRight="@dimen/margin"
             android:layout_width="100dp"
             android:layout_height="match_parent">
 
@@ -39,8 +40,9 @@
             android:text="" />
 
         <LinearLayout
+            android:paddingLeft="@dimen/margin"
+            android:paddingRight="@dimen/margin"
             android:id="@+id/ll_right"
-            style="@style/margin"
             android:layout_width="100dp"
             android:layout_height="match_parent"
             android:gravity="right">
