--- a/Base/app/src/main/res/layout/activity_main.xml
+++ b/Base/app/src/main/res/layout/activity_main.xml
@@ -9,9 +9,11 @@
         android:orientation="vertical"
         tools:context=".MainActivity">
 
+
         <com.scwang.smart.refresh.layout.SmartRefreshLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:visibility="visible"
             >
 
             <LinearLayout
